--- a/testapp/Components/Json/Json.storyboard
+++ b/testapp/Components/Json/Json.storyboard
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="22155" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22155"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
-        <capability name="System colors introduced in macOS 10.14" minToolsVersion="10.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,7 +14,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="547" height="944"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <box boxType="custom" borderWidth="0.0" cornerRadius="4" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="c7E-B8-vpi" customClass="ContentBar" customModule="Bagel" customModuleProvider="target">
+                            <box boxType="custom" borderWidth="0.0" cornerRadius="4" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="c7E-B8-vpi" customClass="ContentBar" customModule="testapp" customModuleProvider="target">
                                 <rect key="frame" x="20" y="894" width="507" height="30"/>
                                 <view key="contentView" id="vYU-D8-bBl">
                                     <rect key="frame" x="0.0" y="0.0" width="507" height="30"/>
@@ -42,16 +40,19 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="203" height="15"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
-                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="gdW-Zl-Et1" userLabel="name">
+                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gdW-Zl-Et1" userLabel="name">
                                                         <rect key="frame" x="3" y="-4" width="197" height="20"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="igx-Xr-Cc3"/>
                                                         </constraints>
-                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" focusRingType="none" alignment="left" title="Root" placeholderString="Root" usesSingleLineMode="YES" id="Qku-pV-Ag6" customClass="VerticallyCenteredTextFieldCell" customModule="Bagel" customModuleProvider="target">
+                                                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" focusRingType="none" alignment="left" title="Root" placeholderString="Root" usesSingleLineMode="YES" id="Qku-pV-Ag6" customClass="VerticallyCenteredTextFieldCell" customModule="testapp" customModuleProvider="target">
                                                             <font key="font" metaFont="systemSemibold" size="13"/>
                                                             <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
                                                             <color key="backgroundColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                                         </textFieldCell>
+                                                        <connections>
+                                                            <action selector="structNameAction:" target="bU7-R8-ocO" id="zfX-0P-1qu"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
                                                 <constraints>
@@ -88,8 +89,8 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="h8e-bs-dzN"/>
                                 </constraints>
-                                <color key="borderColor" name="unemphasizedSelectedContentBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                <color key="fillColor" name="contentBottomBarColor"/>
+                                <color key="borderColor" red="0.30588235294117649" green="0.30196078431372547" blue="0.27058823529411763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="fillColor" red="0.20392156862745098" green="0.20000000000000001" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </box>
                             <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yrC-34-hYb">
                                 <rect key="frame" x="20" y="20" width="507" height="874"/>
@@ -130,6 +131,7 @@
                     </view>
                     <connections>
                         <outlet property="jsonTextView" destination="OsC-uU-2kf" id="fjI-HK-VYP"/>
+                        <outlet property="structName" destination="gdW-Zl-Et1" id="of3-P9-Cjq"/>
                     </connections>
                 </viewController>
                 <customObject id="9uD-mB-xHs" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
@@ -139,8 +141,5 @@
     </scenes>
     <resources>
         <image name="trash.fill" catalog="system" width="15" height="17"/>
-        <namedColor name="contentBottomBarColor">
-            <color red="0.32899999618530273" green="0.32400000095367432" blue="0.4779999852180481" alpha="0.33000001311302185" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
     </resources>
 </document>
