--- a/testapp/Components/Model/Model.storyboard
+++ b/testapp/Components/Model/Model.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
+        <capability name="System colors introduced in macOS 10.14" minToolsVersion="10.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,18 +15,61 @@
                         <rect key="frame" x="0.0" y="0.0" width="450" height="300"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
+                            <box boxType="custom" borderWidth="0.0" cornerRadius="4" title="Box" translatesAutoresizingMaskIntoConstraints="NO" id="cm4-iy-BSx" customClass="ContentBar" customModule="testapp" customModuleProvider="target">
+                                <rect key="frame" x="20" y="250" width="410" height="30"/>
+                                <view key="contentView" id="Mmy-pM-YdD">
+                                    <rect key="frame" x="0.0" y="0.0" width="410" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <button translatesAutoresizingMaskIntoConstraints="NO" id="OQC-I9-4ei">
+                                            <rect key="frame" x="375" y="2" width="15.5" height="22"/>
+                                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="gearshape.fill" catalog="system" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="LYW-MH-JQL">
+                                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                <font key="font" metaFont="system"/>
+                                            </buttonCell>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="15" id="G6J-l6-oFw"/>
+                                                <constraint firstAttribute="width" constant="15" id="vRh-RU-Zcj"/>
+                                            </constraints>
+                                            <connections>
+                                                <action selector="onSettingsClicked:" target="bU7-R8-ocO" id="Thi-W5-yMf"/>
+                                            </connections>
+                                        </button>
+                                        <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dAQ-Nk-BJk">
+                                            <rect key="frame" x="6" y="5" width="41" height="15"/>
+                                            <textFieldCell key="cell" lineBreakMode="clipping" enabled="NO" alignment="left" title="Name" usesSingleLineMode="YES" id="x5P-s7-Lr1">
+                                                <font key="font" metaFont="systemSemibold" size="13"/>
+                                                <color key="textColor" name="secondaryLabelColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                            </textFieldCell>
+                                        </textField>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="OQC-I9-4ei" firstAttribute="top" secondItem="dAQ-Nk-BJk" secondAttribute="top" id="8aG-ad-PTg"/>
+                                        <constraint firstAttribute="trailing" secondItem="OQC-I9-4ei" secondAttribute="trailing" constant="20" id="Iqz-c0-eWH"/>
+                                        <constraint firstItem="dAQ-Nk-BJk" firstAttribute="leading" secondItem="Mmy-pM-YdD" secondAttribute="leading" constant="8" id="MgL-jF-8z0"/>
+                                        <constraint firstAttribute="bottom" secondItem="dAQ-Nk-BJk" secondAttribute="bottom" constant="5" id="bAF-iT-FMA"/>
+                                        <constraint firstItem="OQC-I9-4ei" firstAttribute="top" secondItem="Mmy-pM-YdD" secondAttribute="top" constant="10" id="lif-dB-Zqm"/>
+                                    </constraints>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Bm0-YC-wyQ"/>
+                                </constraints>
+                                <color key="borderColor" name="unemphasizedSelectedContentBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <color key="fillColor" red="0.20392156862745098" green="0.20000000000000001" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </box>
                             <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dSH-aK-NRe">
-                                <rect key="frame" x="20" y="20" width="410" height="260"/>
+                                <rect key="frame" x="20" y="20" width="410" height="230"/>
                                 <clipView key="contentView" drawsBackground="NO" id="ovT-no-KPn">
-                                    <rect key="frame" x="0.0" y="0.0" width="410" height="260"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="410" height="230"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView wantsLayer="YES" importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="zV7-2E-QUb">
-                                            <rect key="frame" x="0.0" y="0.0" width="410" height="260"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="410" height="230"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                            <size key="minSize" width="410" height="260"/>
+                                            <size key="minSize" width="410" height="230"/>
                                             <size key="maxSize" width="978" height="10000000"/>
                                             <color key="insertionPointColor" name="textInsertionPointColor" catalog="System" colorSpace="catalog"/>
                                         </textView>
@@ -36,7 +80,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="evJ-Sd-Izo">
-                                    <rect key="frame" x="394" y="0.0" width="16" height="260"/>
+                                    <rect key="frame" x="394" y="0.0" width="16" height="230"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
@@ -44,8 +88,11 @@
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="dSH-aK-NRe" secondAttribute="trailing" constant="20" id="2t7-1Y-Og7"/>
                             <constraint firstAttribute="bottom" secondItem="dSH-aK-NRe" secondAttribute="bottom" constant="20" id="Z6G-fH-yNk"/>
+                            <constraint firstItem="cm4-iy-BSx" firstAttribute="trailing" secondItem="dSH-aK-NRe" secondAttribute="trailing" id="cRA-eY-U1u"/>
+                            <constraint firstItem="cm4-iy-BSx" firstAttribute="leading" secondItem="dSH-aK-NRe" secondAttribute="leading" id="fXN-f6-9o9"/>
                             <constraint firstItem="dSH-aK-NRe" firstAttribute="leading" secondItem="rt7-fA-Mk7" secondAttribute="leading" constant="20" id="sUp-rX-DrT"/>
-                            <constraint firstItem="dSH-aK-NRe" firstAttribute="top" secondItem="rt7-fA-Mk7" secondAttribute="top" constant="20" id="sea-i5-uYh"/>
+                            <constraint firstItem="dSH-aK-NRe" firstAttribute="top" secondItem="cm4-iy-BSx" secondAttribute="bottom" id="sea-i5-uYh"/>
+                            <constraint firstItem="cm4-iy-BSx" firstAttribute="top" secondItem="rt7-fA-Mk7" secondAttribute="top" constant="20" id="tHK-SO-dRe"/>
                         </constraints>
                     </view>
                     <connections>
@@ -57,4 +104,7 @@
             <point key="canvasLocation" x="-129" y="131"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="gearshape.fill" catalog="system" width="16" height="16"/>
+    </resources>
 </document>
