--- a/j2m/Components/Settings/Settings.storyboard
+++ b/j2m/Components/Settings/Settings.storyboard
@@ -9,7 +9,7 @@
         <!--Settings View Controller-->
         <scene sceneID="PEd-7d-5j0">
             <objects>
-                <viewController storyboardIdentifier="SettingsViewController" id="bU7-R8-ocO" customClass="SettingsViewController" customModule="testapp" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SettingsViewController" id="bU7-R8-ocO" customClass="SettingsViewController" customModule="j2m" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="tOy-S4-hL0">
                         <rect key="frame" x="0.0" y="0.0" width="448" height="231"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -40,7 +40,7 @@
                                                     </textFieldCell>
                                                     <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                     <prototypeCellViews>
-                                                        <tableCellView identifier="CustomCell" id="A1E-kQ-kvp" customClass="SettingsCustomTableViewCell" customModule="testapp" customModuleProvider="target">
+                                                        <tableCellView identifier="CustomCell" id="A1E-kQ-kvp" customClass="SettingsCustomTableViewCell" customModule="j2m" customModuleProvider="target">
                                                             <rect key="frame" x="8" y="0.0" width="409" height="37"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                             <subviews>
@@ -81,7 +81,7 @@
                                     </subviews>
                                 </clipView>
                                 <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="0vw-Vq-qMD">
-                                    <rect key="frame" x="1" y="156" width="406" height="16"/>
+                                    <rect key="frame" x="1" y="184" width="426" height="16"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                                 <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="K2M-eR-cIp">
